SERVER-4554 for shard selection, treat empty ranges separately from universal ranges, avoid generating index bounds for unsatisfiable queries, and temporarily ensure at least one shard is returned